Simple 'Clone' cases work

--- a/src/SourceMapper/SourceMapper/SourceMapper.csproj
+++ b/src/SourceMapper/SourceMapper/SourceMapper.csproj
@@ -7,6 +7,7 @@
     <VersionPrefix>0.1.0</VersionPrefix>
     <LangVersion>latest</LangVersion>
     <IsRoslynComponent>true</IsRoslynComponent>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.0-2.final" />
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include="$(PkgCodegenCS)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visble="false" />
   </ItemGroup>
 
