--- a/test/SourceMapper.Tests/SourceMapper.Tests.csproj
+++ b/test/SourceMapper.Tests/SourceMapper.Tests.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="CodegenCS" Version="1.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Snapper" Version="2.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,7 +29,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\SourceMapper\SourceMapper\SourceMapper.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+    <ProjectReference Include="..\..\src\SourceMapper\SourceMapper\SourceMapper.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CloneTests\_snapshots\" />
   </ItemGroup>
 
 </Project>
