--- a/test/SourceMapper.Tests/SourceMapper.Tests.csproj
+++ b/test/SourceMapper.Tests/SourceMapper.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="CodegenCS" Version="1.0.7" />
+    <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Snapper" Version="2.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
