--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/SourceMapper/SourceMapper/TestContext.cs
+
+
+#Source Generator files
+__Generated/
