--- a/test/SourceMapper.Samples/SourceMapper.Samples.csproj
+++ b/test/SourceMapper.Samples/SourceMapper.Samples.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <CompilerGeneratedFilesOutputPath>__Generated</CompilerGeneratedFilesOutputPath>
     <IsPackable>false</IsPackable>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,10 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CodegenCS" Version="1.0.7" />
-    <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-    <PackageReference Include="Snapper" Version="2.3.0" />
+    <PackageReference Include="SourceMapper" Version="0.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,13 +28,4 @@
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\SourceMapper\SourceMapper\SourceMapper.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CloneTests\_snapshots\" />
-  </ItemGroup>
-
 </Project>
-
